--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-sm col-md-4">
                     <div class="mt-3">
-                        <h4><i class="fas fa-at text-primary"></i> atuldeshmukh0209@gmail.com</h4>
+                        <h4><i class="fas fa-at text-primary"></i> example@gmail.com</h4>
                         <button type="button" class="btn btn-link">
                             <a href="https://github.com/Atuldeshmukh07"><i class="fab fa-github"></i></a></button>
                     </div>
